--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "LogFilePath": "logs/log.txt"
+  },
   "AllowedHosts": "*"
 }
