Re-tweaking consumer and publisher code, configuration settings, added configuration to docker compose.

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,6 +1,12 @@
 {
+  "RabbitMQ": {
+    "HostName": "rabbitmq",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest"
+  },
   "ConnectionStrings": {
-    "MongoDB": "mongodb://localhost:27017/EmployeesCollection"
+    "MongoDB": "mongodb://ongodb_container:27017/EmployeesCollection"
   },
   "Logging": {
     "LogLevel": {
