--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,8 @@ services:
       - ConnectionStrings__MongoDB=mongodb://mongodb-service:27017/EmployeesCollection
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
     ports:
       - "5000:8080"
     volumes:
