fix mongodb connection string

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -6,7 +6,7 @@
     "Password": "guest"
   },
   "ConnectionStrings": {
-    "MongoDB": "mongodb://ongodb_container:27017/EmployeesCollection"
+    "MongoDB": "mongodb://mongodb_container:27017/EmployeesCollection"
   },
   "Logging": {
     "LogLevel": {
