--- a/Presentation/Properties/launchSettings.json
+++ b/Presentation/Properties/launchSettings.json
@@ -25,7 +25,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "RabbitMQ__HostName": "localhost"
       }
     },
     "Container (Dockerfile)": {
