Implemented publisher and subscriber dapr code, fix yaml file for compilation issues, other minor updates.

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -5,7 +5,7 @@
     "Password": "guest"
   },
   "ConnectionStrings": {
-    "MongoDB": "mongodb://mongodb_container:27017/EmployeesCollection"
+    "MongoDB": "mongodb://localhost:27017/EmployeesCollection"
   },
   "Logging": {
     "LogLevel": {
