--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 services:
+
+  # -----------------------------------------------------------------
+  #  PUBLISHER SERVICES (EmployeeManagementSolu)
+  # -----------------------------------------------------------------
   presentation:
     image: ${DOCKER_REGISTRY-}presentation
     container_name: employee-api-container
@@ -25,6 +29,37 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  # -----------------------------------------------------------------
+  #  SUBSCRIBER SERVICES (EmployeeNotifierSolu)
+  # -----------------------------------------------------------------
+  employeenotifier:
+    image: ${DOCKER_REGISTRY-}employeenotifier
+    container_name: employee-notifier-container
+    build:
+      context: .
+      dockerfile: EmployeeNotifier/Dockerfile
+
+  employeenotifier-dapr:
+    image: "daprio/dapr:1.16.0"
+    container_name: dapr_subscriber_sidecar
+    network_mode: service:employeenotifier
+    command: [
+      "/daprd",
+      "-app-id", "notifierservice",
+      "-app-port", "8080",
+      "-resources-path", "/app"
+    ]
+    volumes:
+      - ./rabbitmq-pubsub.yaml:/app/rabbitmq-pubsub.yaml
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      employeenotifier:
+        condition: service_started
+
+  # -----------------------------------------------------------------
+  #  INFRASTRUCTURE SERVICES
+  # -----------------------------------------------------------------
   mongodb-service:
     image: mongo:latest
     container_name: mongodb_container
