--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     image: ${DOCKER_REGISTRY-}employeenotifier
     container_name: employee-notifier-container
     build:
-      context: .
+      context: ../EmployeeNotifierSolu
       dockerfile: EmployeeNotifier/Dockerfile
 
   employeenotifier-dapr:
