--- a/rabbitmq-pubsub.yaml
+++ b/rabbitmq-pubsub.yaml
@@ -6,13 +6,11 @@ spec:
   type: pubsub.rabbitmq
   version: v1
   metadata:
-  - name: host
-    value: "amqp://localhost:5672" # value: "amqp://localhost:5672" # value: "amqp://rabbitmq_container:5672"
+  - name: connectionString
+    value: "amqp://rabbitmq:5672" # value: "amqp://localhost:5672" # value: "amqp://rabbitmq_container:5672"
   - name: backOff.initialTimeoutInSeconds
     value: "60"
   - name: backOff.policy
     value: "constant"
   - name: backOff.duration
     value: "3s"
-  - name: rawPayload
-    value: "true" 
