updated the code for authentication and authorization configuration.

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -7,6 +7,10 @@
   "ConnectionStrings": {
     "MongoDB": "mongodb://localhost:27017/EmployeesCollection"
   },
+  "Keycloak": {
+    "Authority": "http://keycloak:8080/realms/EmployeeManagementRealm",
+    "Audience": "employee-api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
