applied code changes, tested for end-to-end flow inside docker. Works!

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,5 +12,6 @@ services:
 
   keycloak:
     environment:
+      - KC_HOSTNAME=keycloak
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
