configured keycloak implementation using extension methods provided by keycloak.AuthServices.Authorization/Authentication

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,9 +1,4 @@
 {
-  "RabbitMQ": {
-    "Port": 5672,
-    "Username": "guest",
-    "Password": "guest"
-  },
   "ConnectionStrings": {
     "MongoDB": "mongodb://localhost:27017/EmployeesCollection"
   },
@@ -14,6 +9,16 @@
       "Microsoft.AspNetCore.Authentication": "Debug",
       "Microsoft.AspNetCore.Authorization": "Debug"
     }
+  },
+  "Keycloak": {
+    "Realm": "EmployeeMgmtRealm",
+    "AuthServerUrl": "http://host.docker.internal:8400/",
+    "SslRequired": "none",
+    "Resource": "employee-api",
+    "VerifyTokenAudience": true,
+    "EnableRolesMapping": "All",
+    "RolesSource": "resource-access",
+    "RoleClaimType": "roles"
   },
   "AllowedHosts": "*"
 }
